--- a/inventory-app/package.json
+++ b/inventory-app/package.json
@@ -12,12 +12,16 @@
     "@emotion/react": "^11.13.0",
     "@emotion/styled": "^11.13.0",
     "@firebase/auth": "^1.7.6",
+    "@google-cloud/vision": "^4.3.0",
     "@mui/icons-material": "^5.16.6",
     "@mui/material": "^5.16.6",
+    "axios": "^1.7.3",
     "firebase": "^10.12.5",
+    "multer": "^1.4.5-lts.1",
     "next": "14.2.5",
     "react": "^18",
-    "react-dom": "^18"
+    "react-dom": "^18",
+    "react-webcam": "^7.2.0"
   },
   "devDependencies": {
     "eslint": "^8",
